--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "12.2.5",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.35.0",
     "react-query": "^3.39.2",
     "styled-components": "^5.3.5"
   },
